--- a/index.html
+++ b/index.html
@@ -66,18 +66,23 @@
 
                    <img class="app-img" src="images/tangochan.png"> 
 
+
+
               </div> -->
 
        <div>
                   <div class="jcarousel">
                       <ul>
-                          <li><img src="images/tangochan.png"></li>
-                          <li><img src="images/aptquest.png"></li>
+                          <li><h3><a class="app-link" href ="http://tangochan.herokuapp.com/">TangoChan</a></h3><hr><img src="images/tangochan2.png"><p> A Japanese language learning app featuring flash card testing and social list sharing</p> <p>Stack: Ruby/Rails, Javascript, jQuery, AJAX, Foundation, Twitter API</p> <hr></p></li>
+                          <li><h3><a class="app-link" href ="http://tangochan.herokuapp.com/">Apartment Quest</a></h3><hr><img src="images/aptquest2.png"><p> Apartment Hunting app that allows users to quick and easy access to information on neighborhood amenities</p> <p> Stack: Ruby/Rails, Javascript, jQuery, AJAX, Google Maps, Places, Geocoding API</p><hr></li>
                       </ul>
                   </div>
+               
                      <a class="jcarousel-prev" href="#">Prev</a>
                      <a class="jcarousel-next" href="#">Next</a>
         </div>
+
+
        </div> <!-- portfolio-content -->    
 
 
