--- a/index.html
+++ b/index.html
@@ -30,11 +30,14 @@
   <div id="bg"><body background="images/pattern2.png"></div>
     <div id="top-wrapper">
       <div id="top-left">
-          <img id="me"src="images/me3.png"><br><br> 
+          <img id="me"src="images/me.png"><br><br> 
       </div>
       <div id="top-right">
         <h1> Jaime Cohenca | Full Stack Web Dev </h1>
-          <p>  I'm Jaime, and I'm a junior full-stack developer currently living in New York City. I graduated from General Assembly's Web Development Immersive (WDI) in May. Prior to an amazing 12 weeks at GA, I graduated from Northeastern University, and worked in the Advertising Industry for close to two years. When I'm not hacking away, I enjoy listening to music, drawing and painting, and playing as much baskietball as my knees will allow. I'm Jaime, and I'm a junior full-stack developer currently living in New York City.  </p>
+
+        adow: 0px 8px 10px -6pxadow: 0px 8px 10px -6pxadow: 0px 8px 10px -6pxadow: 0px 8px 10px -6pxadow: 0px 8px 10px -6pxadow: 0px 8px 10px -6pxadow: 0px 8px 10px -6pxadow: 0px 8px 10px -6pxadow: 0px 8px 10px -6pxadow: 0px 8px 10px -6pxadow: 0px 8px 10px -6pxadow: 0px 8px 10px -6pxadow: 0px 8px 10px -6pxadow: 0px 8px 10px -6pxadow: 0px 8px 10px -6pxadow: 0px 8px 10px -6pxadow: 0px 8px 10px -6pxadow: 0px 8px 10px -6pxadow: 0px 8px 10px -6pxadow: 0px 8px 10px -6pxadow: 0px 8px 10px -6pxadow: 0px 8px 10px -6pxadow: 0px 8px 10px -6pxadow: 0px 8px 10px -6pxadow: 0px 8px 10px -6pxadow: 0px 8px 10px -6pxadow: 0px 8pxadow: 0px 8px 10px -6pxadow: 0px 8px 10px -6pxadow: 0px 8px 10px -6pxadow: 0px 8px 10px -6pxadow: 0px 8px 10px -6px 10px -6px<br><br> adow: 0px 8px 10px -6pxadow: 0px 8px 10px -6pxadow: 0px 8px 10px -6pxadow: 0px 8px 10px -6pxadow: 0px 8px 10px -6pxadow: 0px 8px 10px -6pxadow: 0px 8px 10px -6pxadow: 0px 8px 10px -6pxadow: 0px 8px 10px -6pxadow: 0px 8px 10px -6pxadow: 0px 8px 10px -6pxadow: 0px 8px 10px -6pxadow: 0px 8px 10px -6pxadow: 0px 8px 10px -6pxadow: 0px 8px 10px -6pxadow: 0px 8px 10px -6pxadow: 0px 8px 10px -6pxadow: 0px 8px 10px -6pxadow: 0px 8px 10px -6pxadow: 0px 8px 10px -6pxadow: 0px 8px 10px -6pxadow: 0px 8px 10pxadow: 0px 8px 10px -6pxadow: 0px 8px 10px -6px -6pxadow: 0px 8px 10px -6pxadow: 0px 8px 10px -6pxadow: 0px 8px 10px -6pxadow: 0px 8px 10px -6px
+
+     <!--      <p>  I'm Jaime, and I'm a junior full-stack developer currently living in New York City. I graduated from General Assembly's Web Development Immersive (WDI) in May. Prior to an amazing 12 weeks at GA, I graduated from Northeastern University, and worked in the Advertising Industry for close to two years. When I'm not hacking away, I enjoy listening to music, drawing and painting, and playing as much baskietball as my knees will allow. I'm Jaime, and I'm a junior full-stack developer currently living in New York City.  </p> -->
       </div>
     </div>
 
