--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
 <body>
 
 <div id="main">
-  <div id="bg"><body background="images/pattern2.png"></div>
+  <!-- <div id="bg"><body background="images/pattern2.png"></div> -->
+  <div id="bg"><body background="images/court.png"></div>
     <div id="top-wrapper">
       <div id="top-left">
           <img id="me"src="images/me.png"><br><br> 
