portfolio button animations

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <img id="me"src="images/me.png"><br><br> 
       </div>
       <div id="top-right">
-        <h1> Jaime Cohenca | Full Stack Web Dev </h1>
+        <h1> Jaime Cohenca | Full Stack Web Developer </h1>
 
         adow: 0px 8px 10px -6pxadow: 0px 8px 10px -6pxadow: 0px 8px 10px -6pxadow: 0px 8px 10px -6pxadow: 0px 8px 10px -6pxadow: 0px 8px 10px -6pxadow: 0px 8px 10px -6pxadow: 0px 8px 10px -6pxadow: 0px 8px 10px -6pxadow: 0px 8px 10px -6pxadow: 0px 8px 10px -6pxadow: 0px 8px 10px -6pxadow: 0px 8px 10px -6pxadow: 0px 8px 10px -6pxadow: 0px 8px 10px -6pxadow: 0px 8px 10px -6pxadow: 0px 8px 10px -6pxadow: 0px 8px 10px -6pxadow: 0px 8px 10px -6pxadow: 0px 8px 10px -6pxadow: 0px 8px 10px -6pxadow: 0px 8px 10px -6pxadow: 0px 8px 10px -6pxadow: 0px 8px 10px -6pxadow: 0px 8px 10px -6pxadow: 0px 8px 10px -6pxadow: 0px 8pxadow: 0px 8px 10px -6pxadow: 0px 8px 10px -6pxadow: 0px 8px 10px -6pxadow: 0px 8px 10px -6pxadow: 0px 8px 10px -6px 10px -6px<br><br> adow: 0px 8px 10px -6pxadow: 0px 8px 10px -6pxadow: 0px 8px 10px -6pxadow: 0px 8px 10px -6pxadow: 0px 8px 10px -6pxadow: 0px 8px 10px -6pxadow: 0px 8px 10px -6pxadow: 0px 8px 10px -6pxadow: 0px 8px 10px -6pxadow: 0px 8px 10px -6pxadow: 0px 8px 10px -6pxadow: 0px 8px 10px -6pxadow: 0px 8px 10px -6pxadow: 0px 8px 10px -6pxadow: 0px 8px 10px -6pxadow: 0px 8px 10px -6pxadow: 0px 8px 10px -6pxadow: 0px 8px 10px -6pxadow: 0px 8px 10px -6pxadow: 0px 8px 10px -6pxadow: 0px 8px 10px -6pxadow: 0px 8px 10pxadow: 0px 8px 10px -6pxadow: 0px 8px 10px -6px -6pxadow: 0px 8px 10px -6pxadow: 0px 8px 10px -6pxadow: 0px 8px 10px -6pxadow: 0px 8px 10px -6px
 
@@ -54,8 +54,9 @@
                       </ul>
                   </div>  
                
-                     <a class="jcarousel-prev" href="#"><img src="images/prev.png"></a>
-                     <a class="jcarousel-next" href="#"><img src="images/next.png"></a>
+            <a class="jcarousel-prev" href="#"><img class="wiggle" src="images/prev.png"></a>
+            <a class="jcarousel-next" href="#"><img class="wiggle" src="images/next.png"></a>
+
        </div> <!-- portfolio-content -->    
 
 
