--- a/index.html
+++ b/index.html
@@ -4,12 +4,10 @@
 <html>
 
 <title>Jaime Cohenca </title>
-
 <script type="text/javascript" src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
 <script type="text/javascript" src="js/jquery.jcarousel.js"></script>
 <script src="js/jquery.classywiggle.min.js"></script>
-<link href='http://fonts.googleapis.com/css?family=Arvo|Walter+Turncoat' rel='stylesheet' type='text/css'>
-<link href='http://fonts.googleapis.com/css?family=Dosis:200,300,400,500,600,700,800|Abel|PT+Sans+Narrow:400,700|Pathway+Gothic+One' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Lato:400,900' rel='stylesheet' type='text/css'>
 <script src="js/index.js"></script>
 <link rel="stylesheet" type="text/css" href="css/app.css">
     
@@ -34,7 +32,7 @@
           <img id="me"src="images/me.png"><br><br> 
       </div>
       <div id="top-right">
-        <h1> Jaime Cohenca | Full Stack Web Developer </h1>
+        <h1> <span id="font">JAIME</span> COHENCA | FULL STACK WEB DEV </h1>
 
         adow: 0px 8px 10px -6pxadow: 0px 8px 10px -6pxadow: 0px 8px 10px -6pxadow: 0px 8px 10px -6pxadow: 0px 8px 10px -6pxadow: 0px 8px 10px -6pxadow: 0px 8px 10px -6pxadow: 0px 8px 10px -6pxadow: 0px 8px 10px -6pxadow: 0px 8px 10px -6pxadow: 0px 8px 10px -6pxadow: 0px 8px 10px -6pxadow: 0px 8px 10px -6pxadow: 0px 8px 10px -6pxadow: 0px 8px 10px -6pxadow: 0px 8px 10px -6pxadow: 0px 8px 10px -6pxadow: 0px 8px 10px -6pxadow: 0px 8px 10px -6pxadow: 0px 8px 10px -6pxadow: 0px 8px 10px -6pxadow: 0px 8px 10px -6pxadow: 0px 8px 10px -6pxadow: 0px 8px 10px -6pxadow: 0px 8px 10px -6pxadow: 0px 8px 10px -6pxadow: 0px 8pxadow: 0px 8px 10px -6pxadow: 0px 8px 10px -6pxadow: 0px 8px 10px -6pxadow: 0px 8px 10px -6pxadow: 0px 8px 10px -6px 10px -6px<br><br> adow: 0px 8px 10px -6pxadow: 0px 8px 10px -6pxadow: 0px 8px 10px -6pxadow: 0px 8px 10px -6pxadow: 0px 8px 10px -6pxadow: 0px 8px 10px -6pxadow: 0px 8px 10px -6pxadow: 0px 8px 10px -6pxadow: 0px 8px 10px -6pxadow: 0px 8px 10px -6pxadow: 0px 8px 10px -6pxadow: 0px 8px 10px -6pxadow: 0px 8px 10px -6pxadow: 0px 8px 10px -6pxadow: 0px 8px 10px -6pxadow: 0px 8px 10px -6pxadow: 0px 8px 10px -6pxadow: 0px 8px 10px -6pxadow: 0px 8px 10px -6pxadow: 0px 8px 10px -6pxadow: 0px 8px 10px -6pxadow: 0px 8px 10pxadow: 0px 8px 10px -6pxadow: 0px 8px 10px -6px -6pxadow: 0px 8px 10px -6pxadow: 0px 8px 10px -6pxadow: 0px 8px 10px -6pxadow: 0px 8px 10px -6px
 
@@ -44,7 +42,7 @@
 
 <!-- Portfolio -->
 
-      <a id="portfolio"></a><div class="section">Portfolio</div><br>  
+      <a id="portfolio"></a><div class="section">PORTFOLIO</div><br>  
         <div id="portfolio-content">  
                   <div class="jcarousel">
                       <ul>
@@ -62,7 +60,7 @@
 
 <!-- My Stack -->
 
-      <a id="stack"></a> <div class="section">My Stack</div><br> 
+      <a id="stack"></a> <div class="section">STACK</div><br> 
               <div id="stack">
                 <div class="stack-box">
                     <ul class="stack-list">
