--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
               <script type="text/javascript" src="js/jquery.jcarousel.js"></script>
               <script src="js/jquery.classywiggle.min.js"></script>
               <link href='http://fonts.googleapis.com/css?family=Lato:400,900' rel='stylesheet' type='text/css'>
+              <link href='http://fonts.googleapis.com/css?family=Ubuntu' rel='stylesheet' type='text/css'>
               <script src="js/index.js"></script>
               <link rel="stylesheet" type="text/css" href="css/app.css">
 
@@ -41,9 +42,8 @@
                   <h1> <span id="font">JAIME COHENCA</h1>
                   <h2>FULL STACK WEB DEV </h2>
 
-                  Hi! I'm Jaime, and I'm a web developer currently living in New York City. I recently graduated from General Assembly's Web Development Immersive (WDI) in May. Prior to an amazing 12 weeks at GA, I graduated from Northeastern University, and worked in the Advertising Industry for close to two years. When I'm not hacking away, I enjoy listening to music, drawing and painting, and playing as much baskietball as my knees will allow.
+                  <p id="about">Hi! I'm Jaime, and I'm a web developer currently living in New York City. I recently graduated from General Assembly's Web Development Immersive (WDI) in May. Prior to an amazing 12 weeks at GA, I graduated from Northeastern University, and worked in the Advertising Industry for close to two years. When I'm not hacking away, I enjoy listening to music, drawing, painting, and playing as much baskietball as my knees will allow.</p>
 
-               <!--      <p>  I'm Jaime, and I'm a junior full-stack developer currently living in New York City. I graduated from General Assembly's Web Development Immersive (WDI) in May. Prior to an amazing 12 weeks at GA, I graduated from Northeastern University, and worked in the Advertising Industry for close to two years. When I'm not hacking away, I enjoy listening to music, drawing and painting, and playing as much baskietball as my knees will allow. I'm Jaime, and I'm a junior full-stack developer currently living in New York City.  </p> -->
                 </div>
               </div>
 
@@ -53,9 +53,9 @@
                   <div id="portfolio-content">  
                             <div class="jcarousel">
                                 <ul> 
-                                    <li><h1><a class="app-link" href ="http://aptquest.herokuapp.com/">Apartment Quest</h1>  <img src="images/aptquest2.png"></a><p> Apartment Hunting app that allows users to quick and easy access to information on neighborhood amenities</p> <p> Stack: Ruby/Rails, Javascript, jQuery, AJAX, Google Maps, Places, Geocoding API</p><hr></li>
+                                    <li><h2><a class="app-link" href ="http://aptquest.herokuapp.com/">Apartment Quest</h2>  <img src="images/aptquest2.png"></a><p> Apartment Hunting app that allows users to quick and easy access to information on neighborhood amenities</p> <p> Stack: Ruby/Rails, Javascript, jQuery, AJAX, Google Maps, Places, Geocoding API</p><hr></li>
 
-                                    <li><h1><a class="app-link" href ="http://tangochan.herokuapp.com/">TangoChan</h1><img src="images/tangochan2.png"></a><p> A Japanese language learning app featuring flash card testing and social list sharing</p> <p>Stack: Ruby/Rails, Javascript, jQuery, AJAX, Foundation, Twitter API</p> <hr></p></li>
+                                    <li><h2><a class="app-link" href ="http://tangochan.herokuapp.com/">TangoChan</h2><img src="images/tangochan2.png"></a><p> A Japanese language learning app featuring flash card testing and social list sharing</p> <p>Stack: Ruby/Rails, Javascript, jQuery, AJAX, Foundation, Twitter API</p> <hr></p></li>
                                    
                                 </ul>
                             </div>  
