--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
                   <div id="portfolio-content">  
                             <div class="jcarousel">
                                 <ul> 
-                                    <li><h2><a class="app-link" href ="http://aptquest.herokuapp.com/">Apartment Quest</h2>  <img src="images/aptquest2.png"></a><p> Apartment Hunting app that allows users to quick and easy access to information on neighborhood amenities</p> <p> Stack: Ruby/Rails, Javascript, jQuery, AJAX, Google Maps, Places, Geocoding API</p><hr></li>
+                                    <li><h2><a class="app-link" href ="http://aptquest.herokuapp.com/">Apartment Quest</h2>  <img src="images/aptquest2.png"></a><p> Apartment Hunting app that allows users to quick and easy access to information on neighborhood amenities</p> <p> Stack: Ruby/Rails, Javascript, jQuery, AJAX, Google Maps, Places, Geocoding API</p> <p> <a href="https://github.com/jcohenca/aptQuest">View the Code</a> | <a href="http://aptquest.herokuapp.com/"> View the Site</a></p> </p> <hr></li> 
 
-                                    <li><h2><a class="app-link" href ="http://tangochan.herokuapp.com/">TangoChan</h2><img src="images/tangochan2.png"></a><p> A Japanese language learning app featuring flash card testing and social list sharing</p> <p>Stack: Ruby/Rails, Javascript, jQuery, AJAX, Foundation, Twitter API</p> <hr></p></li>
+                                    <li><h2><a class="app-link" href ="http://tangochan.herokuapp.com/">TangoChan</h2><img src="images/tangochan2.png"></a><p> A Japanese language learning app featuring flash card testing and social list sharing</p> <p>Stack: Ruby/Rails, Javascript, jQuery, AJAX, Foundation, Twitter API</p> <p><a href="https://github.com/trivett/tangochan">View the Code </a> | <a href="http://tangochan.herokuapp.com/">View the Site</a></p>  <hr></li>
                                    
                                 </ul>
                             </div>  
