--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                   <li><a href="#about">About</a></li>
                   <li><a href="#portfolio">Portfolio</a></li>
                   <li><a href="#stack">My Stack</a></li>
-                  <li><a href="#resume">Resume</a></li>
+                  <li><a href="resume.html">Resume</a></li>
                   <li><a href="mailto:jcohenca@gmail.com"><img class="wiggle" src="images/email.png"></a></li>
                   <li><a href="https://www.linkedin.com/in/jcohenca"><img class="wiggle" src="images/linkedin.png"></a></li>
                   <li><a href="https://github.com/jcohenca/"><img class="wiggle" src="images/github.png"></a></li>
