--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
               <link rel="stylesheet" type="text/css" href="css/app.css">
 
       </head>
-              <a id="about"></a>
 
             <ul class="nav"> 
 
@@ -28,6 +27,7 @@
                   <li><a href="https://github.com/jcohenca/"><img class="wiggle" src="images/github.png"></a></li>
 
             </ul>
+            <a id="about"></a>
 
       <body>
 
@@ -40,7 +40,9 @@
                 </div>
                 <div id="top-right">
                   <h1> <span id="font">JAIME COHENCA</h1>
-                  <h2>FULL STACK WEB DEV </h2>
+                  <h2>FULL STACK WEB DEV </h2> 
+
+                  <a id="portfolio"></a>
 
                   <p id="about">Hi! I'm Jaime, and I'm a web developer currently living in New York City. I recently graduated from General Assembly's Web Development Immersive (WDI) in May. Prior to an intense 12 weeks of learning at GA, I graduated from Northeastern University, and worked in the Advertising Industry for close to two years. When I'm not hacking away, I enjoy listening to music, drawing, painting, and playing as much baskietball as my knees will allow.</p>
 
@@ -49,7 +51,7 @@
 
           <!-- Portfolio -->
 
-                <a id="portfolio"></a><div class="section">PORTFOLIO</div><br>  
+                </a><div class="section">PORTFOLIO</div><br>  
                   <div id="portfolio-content">  
                             <div class="jcarousel">
                                 <ul> 
