--- a/index.html
+++ b/index.html
@@ -39,8 +39,7 @@
                     <img id="me"src="images/me.png"><br><br> 
                 </div>
                 <div id="top-right">
-                  <h1> <span id="font">JAIME COHENCA</h1>
-                  <h2>FULL STACK WEB DEV </h2> 
+                  <h1> <span id="font">JAIME COHENCA | FULL STACK WEB DEVELOPER </h1> 
 
                   <a id="portfolio"></a>
 
