--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
                   <a id="portfolio"></a>
 
-                  <p id="about">Hi! I'm Jaime, and I'm a web developer currently living in New York City. I recently graduated from General Assembly's Web Development Immersive (WDI) in May. Prior to an intense 12 weeks of learning at GA, I graduated from Northeastern University, and worked in the Advertising Industry for close to two years. When I'm not hacking away, I enjoy listening to music, drawing, painting, and playing as much baskietball as my knees will allow.</p>
+                  <p id="about">Hi! I'm Jaime, and I'm a web developer currently living in New York City. I recently graduated from General Assembly's Web Development Immersive. Prior to an intense 12 weeks of learning at GA, I graduated from Northeastern University, and worked in the Advertising Industry for close to two years. When I'm not hacking away, I enjoy listening to music, drawing, painting, and playing as much baskietball as my knees will allow.</p>
 
                 </div>
               </div>
