--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                                   <h3>Methodologies/Other</h3>
                                   <li>Agile</li>
                                   <li>Github</li>
-                                  <li>TDD / BDD</li>
+                                  <li>TDD/li>
                                   <li>Heroku</li>
                                   <li>AJAX</li>
                               </ul>
