--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                                   <h3>Methodologies/Other</h3>
                                   <li>Agile</li>
                                   <li>Github</li>
-                                  <li>TDD/li>
+                                  <li>TDD</li>
                                   <li>Heroku</li>
                                   <li>AJAX</li>
                               </ul>
@@ -102,7 +102,6 @@
                               <ul class="stack-list">
                                   <h3>Testing</h3>
                                   <li>RSpec</li>
-                                  <li>Capybara</li>
                                   <li>Jasmine</li>
                               </ul>
                           </div>
