--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
                   <li><a href="#about">About</a></li>
                   <li><a href="#portfolio">Portfolio</a></li>
-                  <li><a href="#stack">My Stack</a></li>
+                  <li><a href="#stack">Skills</a></li>
                   <li><a href="resume.html">Resume</a></li>
                   <li><a href="mailto:jcohenca@gmail.com"><img class="wiggle" src="images/email.png"></a></li>
                   <li><a href="https://www.linkedin.com/in/jcohenca"><img class="wiggle" src="images/linkedin.png"></a></li>
@@ -66,7 +66,7 @@
 
           <!-- My Stack -->
 
-                <a id="stack"></a> <div class="section">STACK</div><br> 
+                <a id="stack"></a> <div class="section">SKILLS</div><br> 
                         <div id="stack">
                           <div class="stack-box">
                               <ul class="stack-list">
