--- a/ball.html
+++ b/ball.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-  <div id="court"><img src="images/bball.png"> <br></div>
+  <div id="court"><img src="images/court.jpeg"> <br></div>
   
 
 
