--- a/ball.html
+++ b/ball.html
@@ -14,7 +14,7 @@
 <body>
   <div id="court"><img src="images/court.jpeg"> <br></div>
   
-
+<div id="ball"><img src="images/basketball.png"></div>
 
 <div id="x">
   <div class="x">X</div>
@@ -33,7 +33,7 @@
   <div class="o">O</div><br>
 </div>
 
-<div id="ball"><img src="images/basketball.png">
+
 
 
 
