--- a/ball.html
+++ b/ball.html
@@ -14,18 +14,18 @@
 <body>
   <div id="court"><img src="images/court.jpeg"> <br></div>
   
-<div id="ball"><img src="images/basketball.png"></div>
 
-<div id="x">
+
+<div id="draggables">
+
+  <div id="ball"><img src="images/basketball.png"></div>
+
   <div class="x">X</div>
   <div class="x">X</div>
   <div class="x">X</div>
   <div class="x">X</div>
   <div class="x">X</div><br>
-</div>
 
-
-<div id="o">
   <div class="o">O</div>
   <div class="o">O</div>
   <div class="o">O</div>
