--- a/ball.html
+++ b/ball.html
@@ -16,26 +16,46 @@
   
 
 
-<div id="draggables">
+<div class="draggables">
 
   <div id="ball"><img src="images/basketball.png"></div>
 
-  <div class="x">X</div>
-  <div class="x">X</div>
-  <div class="x">X</div>
-  <div class="x">X</div>
-  <div class="x">X</div><br>
+  <div id="x1">X</div>
+  <div id="x2">X</div>
+  <div id="x3">X</div>
+  <div id="x4">X</div>
+  <div id="x5">X</div><br>
 
-  <div class="o">O</div>
-  <div class="o">O</div>
-  <div class="o">O</div>
-  <div class="o">O</div>
-  <div class="o">O</div><br>
+  <div id="o1">O</div>
+  <div id="o2">O</div>
+  <div id="o3">O</div>
+  <div id="o4">O</div>
+  <div id="o5">O</div><br>
 </div>
 
 
 
+<div class="offense">
+  Offense<br><br>
 
+  <div id="results1"></div>
+  <div id="results2"></div>
+  <div id="results3"></div>
+  <div id="results4"></div>
+  <div id="results5"></div><br>
+
+</div>
+
+<div class="defense">
+  Defense<br><br>
+
+  <div id="results6"></div>
+  <div id="results7"></div>
+  <div id="results8"></div>
+  <div id="results9"></div>
+  <div id="results10"></div>
+
+</div>
 
 
 
