--- a/ball.html
+++ b/ball.html
@@ -13,10 +13,10 @@
 
 <body>
 
-    <select id="shotclock">
-    </select>
+    Shot Clock: <select id="shotclock">
+    </select><br>
 
-    <div id="court"><img src="images/court.jpeg"> <br></div>
+    <div id="court"><img src="images/court.jpg"> <br></div>
     
 
   <div class="draggables">
