--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <div id="bg"><body background="images/lolz.jpeg"></div>
               <div id="top-wrapper">
                 <div id="top-left">
-                    <img id="me"src="images/me.png"><br><br> 
+                    <img id="me"src="images/lol.gif"><br><br> 
                 </div>
                 <div id="top-right">
                   <h1> JAIME COHENCA </h1> <h2> FULL STACK WEB DEVELOPER </h2> 
