--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                   <li> <a href="#about" onclick="about()">About</a> </li><hr>
                   <li> <a href="#port" onclick="portfolio(), slides()">Portfolio</a> </li><hr>
                   <li> <a href="#stack" onclick="skills()">Skills</a> </li><hr>
-                  <li> <a href="#resume" onclick="resume()">Resume</a> </li><hr>
+                  <li> <a href="#res" onclick="resume()">Resume</a> </li><hr>
                   <li> <a href="mailto:jcohenca@gmail.com"> <img class="wiggle" src="images/email.png"></a> </li>
                   <li> <a href="https://www.linkedin.com/in/jcohenca"> <img class="wiggle" src="images/linkedin.png"></a> </li><br>
                   <li> <a href="https://github.com/jcohenca/"> <img class="wiggle" src="images/github.png"></a> </li><hr>
@@ -56,10 +56,13 @@
 
       </div>
 
+          <!-- Resume -->
+
+                  <div id="resume">
+                    <img src="images/resume.png">
+                  </div>
 
           <!-- My Stack -->
-
-                <a id="stack"></a> <div class="section">SKILLS</div><br> 
 
                         <div id="stack">
                           <div class="stack-box">
@@ -69,7 +72,7 @@
                                   <li>Javascript</li>
                                   <li>HTML</li>
                                   <li>CSS</li>
-                                  <li>SQL (PostgreSQL)</li>
+                                  <li>SQL (PostgreSQL/MySQL)</li>
                               </ul>
                           </div>
                           <div class="stack-box">
@@ -78,26 +81,20 @@
                                   <li>Rails</li>
                                   <li>Sinatra</li>
                                   <li>jQuery</li>
-                                  <li>Underscore.js</li>
+                                  <li>AJAX</li>
                                   <li>Foundation</li>
                               </ul>
                           </div>
                           <div class="stack-box">
                               <ul class="stack-list">
                                   <h3>Methodologies/Other</h3>
-                                  <li>Agile</li>
-                                  <li>Github</li>
-                                  <li>AJAX</li>
+                                  <li>Git/Github</li>
                                   <li>Heroku</li>
                                   <li>AWS</li>
-                              </ul>
-                          </div>
-                          <div class="stack-box">
-                              <ul class="stack-list">
-                                  <h3>Testing</h3>
-                                  <li>RSpec</li>
+                                   <li>RSpec</li>
                                   <li>Jasmine</li>
                               </ul>
+                          </div>
                           </div>
                       </div>
 
@@ -113,14 +110,7 @@
                           </ul>
                         </div>
 
-          <!-- Resume -->
-
-                  <div id="resume"> <a id="resume"> </a> 
-
-                  <img id="res" src="images/resume.png">
-
-                  </div>
           </div>
-        <br><hr>
+                                                            <br><hr>
         </div>
   </html>
