--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <div id="main">
             
 
-        <div id="bg"> <body background="images/ok.png"> </div>
+        <div id="bg"> <body background="images/ok2.png"> </div>
 
 
         <div id="top-left">
@@ -111,6 +111,6 @@
                         </div>
 
           </div>
-                                                            <br><hr>
+                                                            
         </div>
   </html>
