--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       
             
 
-        <div id="bg"> </div>
+        <div id="bg"> <body background="images/ok2.png"> </div>
 
         <div id="main">
 
