--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
                         <div class="slider">
                           <ul class="slider">
-                            <li><img src="images/xando.png" /> <p class="caption">UI built for advanced basketball analyitcs testing. <br> Tech: Ruby/Rails, R, RinRuby, Javascript, jQuery, AJAX, AWS</p> </li>
+                            <li><img src="images/xando.png" /> <p class="caption">UI built for advanced basketball analytics testing. <br> Tech: Ruby/Rails, R, RinRuby, Javascript, jQuery, AJAX, AWS</p> </li>
                             <li><a href="http://aptquest.herokuapp.com/"> <img src="images/aptquest2.png"> </a> <p class="caption"> Apartment Hunting app that allows users to quickly and easily access to information on neighborhood amenities <br> Tech: Ruby/Rails, Javascript, jQuery, AJAX, Google Maps, Places, Geocoding API</p> </li>
                             <li><a href="http://aptquest.herokuapp.com/"> <img src="images/tangochan2.png"> </a> <p class="caption">A Japanese language learning app featuring flash card testing and social list sharing. <br> Tech: Ruby/Rails, Javascript, jQuery, AJAX, Foundation, Twitter API</p> </li>
                           </ul>
